fix: display all height on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,10 +18,11 @@
 
 body {
   color: black;
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  height: 100dvh;
+}
+
+.all-height {
+  position: fixed;
+  /* min-height: -webkit-fill-available;*/
+  height: 100%;
 }
